[package]
name = "healthcheck-rs"
version = "0.1.0"
authors = ["Tales Viegas"]
edition = "2018"
license = "MIT"
description = "A Rust executable for simple HTTP check status."
homepage = "https://github.com/selatotal/healthcheck-rs"
repository = "https://github.com/selatotal/healthcheck-rs"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking"] }
