[package]
name = "healthcheck-rs"
version = "0.1.0"
authors = ["Tales Viegas <selatotal@gmail.com>"]
license = "MIT"
description = "A Rust executable for simple HTTP check status."
readme = "README.md"
homepage = "https://github.com/selatotal/healthcheck-rs"
repository = "https://github.com/selatotal/healthcheck-rs"
keywords = ["cli", "devops", "healthcheck"]
categories = ["command-line-utilities", "sre", "devops"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking"] }
