[package]
name = "healthcheck-rs"
version = "0.1.1"
authors = ["Tales Viegas <selatotal@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Rust executable for simple HTTP check status."
readme = "README.md"
homepage = "https://github.com/selatotal/healthcheck-rs"
repository = "https://github.com/selatotal/healthcheck-rs"
keywords = ["cli", "devops", "healthcheck"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking"] }
